--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,23 +23,23 @@
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="firstname" id="name" placeholder="username" required/>
+                                <input type="text" name="firstname" id="name" placeholder="firstname" required/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="lastname" id="name" placeholder="username" required/>
+                                <input type="text" name="lastname" id="name" placeholder="lastname" required/>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
                                 <input type="email" name="email" id="email" placeholder="Your Email" required/>
                             </div>
+                              <div class="form-group">
+                                <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="username" id="name" placeholder="username" required/>
+                            </div>
                             <div class="form-group">
                                 <label for="pass"><i class="zmdi zmdi-lock"></i></label>
                                 <input type="password" name="password" id="pass" placeholder="Password" required/>
-                            </div>
-                            <div class="form-group">
-                                <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
-                                <input type="password" name="repassword" id="re_pass" placeholder="Confirm your password" required/>
                             </div>
                             <div class="form-group">
                                 <input type="checkbox" name="agreeterm" id="agree-term" class="agree-term" />
