--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="DryThemes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.png" />    
+        <link rel="shortcut icon" href="img/favicon.png" />    
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700' rel='stylesheet' type='text/css'>		
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
@@ -30,7 +30,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <img src="images/ajax-document-loader.gif" alt="Loading...">                    
+                        <img src="img/ajax-document-loader.gif" alt="Loading...">                    
                     </td>
                 </tr>
             </tbody>
@@ -53,7 +53,7 @@
 
                     <h1 class="site-title">
                         <a href="index.html">
-                            <img src="images/sunDefaultLogo.png" alt="Sun-">
+                            <img src="img/sunDefaultLogo.png" alt="Sun-">
                         </a>               
                     </h1>
 
