--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="DryThemes" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="img/favicon.png" />    
+        <link rel="shortcut icon" href="images/favicon.png" />    
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700' rel='stylesheet' type='text/css'>		
         <link rel="stylesheet" type="text/css"  href='css/clear.css' />
         <link rel="stylesheet" type="text/css"  href='css/common.css' />
@@ -16,7 +16,7 @@
         <link rel="stylesheet" type="text/css"  href='css/carouFredSel.css' />
         <link rel="stylesheet" type="text/css"  href='css/prettyPhoto.css' />        
         <link rel="stylesheet" type="text/css"  href='css/sm-clean.css' />        
-        <link rel="stylesheet" type="text/css"  href='style.css' />
+        <link rel="stylesheet" type="text/css"  href='css/style.css' />
 
         <!--[if lt IE 9]>
                 <script src="js/html5shiv.js"></script>                
